--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -21,7 +21,7 @@ const t = useTranslations(lang);
 ---
 
 <section
-    class="relative min-h-screen flex flex-col justify-center pt-24 pb-16 overflow-hidden"
+    class="relative lg:min-h-screen flex flex-col justify-center pt-20 lg:pt-24 pb-12 lg:pb-16 overflow-hidden"
 >
     <!-- Animated background gradient -->
     <div class="absolute inset-0 overflow-hidden">
