--- a/src/components/landing/WidgetsDisplay.astro
+++ b/src/components/landing/WidgetsDisplay.astro
@@ -25,7 +25,7 @@ const t = useTranslations(lang);
 
 <section
     id="widgets"
-    class="py-24 relative overflow-hidden bg-white dark:bg-black transition-colors duration-500"
+    class="py-16 md:py-24 relative overflow-hidden bg-white dark:bg-black transition-colors duration-500"
 >
     <!-- Decorative background -->
     <div
