--- a/src/components/landing/NotificationModes.astro
+++ b/src/components/landing/NotificationModes.astro
@@ -30,7 +30,7 @@ const modes = [
 
 <section
     id="notification-modes"
-    class="py-24 relative overflow-hidden bg-white dark:bg-black"
+    class="py-16 md:py-24 relative overflow-hidden bg-white dark:bg-black"
 >
     <!-- ... same as before, skipping to simulator ... -->
     <div class="container mx-auto px-6 relative z-10">
