--- a/src/components/SurveyWidget.astro
+++ b/src/components/SurveyWidget.astro
@@ -28,6 +28,7 @@ const supabase = getSupabase();
         <button
             id="close-survey-widget"
             class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 dark:hover:text-white transition-colors"
+            aria-label="Close survey"
         >
             <X className="w-5 h-5" />
         </button>
